--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -46,7 +46,7 @@
     <div class="col-md-7 col-sm-8 col-xs-12">
       <div class="row" data-gutter="10">
         <div class="col-md-4 col-sm-4 col-xs-12 pull-sm-right">
-          <div class="box-highlight">
+          <div class="box-highlight side-small-box">
             <!--<p class="product-page-price-list"><%#= @product.price_in_rupees %></p>-->
             <p class="product-page-price time-price">
               <% if @product.per_hour_price > 0 %>
@@ -115,12 +115,21 @@
               <!--</ul>-->
             </div>
             <div class="product-page-side-section">
-              <h5 class="product-page-side-title">Shipping & Returns</h5>
-              <p class="product-page-side-text">In the store of your choice in 3-5 working days</p>
-              <p class="product-page-side-text">STANDARD 4.95 USD FREE (ORDERS OVER 50 USD) In 2-4 working days*</p>
-              <p class="product-page-side-text">EXPRESS 9.95 USD In 24-48 hours (working days)*</p>
-              <p class="product-page-side-text">* Except remote areas</p>
-              <p class="product-page-side-text">You have one month from the shipping confirmation email.</p>
+              <h5 class="product-page-side-title"><%= @product.user.name %></h5>
+              <ul class="product-caption-rating">
+                <% for i in 1..5 %>
+                    <% if i <= @product.rating %>
+                        <li class="rated"><i class="fa fa-star"></i></li>
+                    <% else %>
+                        <li class=""><i class="fa fa-star"></i></li>
+                    <% end %>
+                <% end %>
+              </ul>
+              <!--<p class="product-page-side-text">In the store of your choice in 3-5 working days</p>-->
+              <!--<p class="product-page-side-text">STANDARD 4.95 USD FREE (ORDERS OVER 50 USD) In 2-4 working days*</p>-->
+              <!--<p class="product-page-side-text">EXPRESS 9.95 USD In 24-48 hours (working days)*</p>-->
+              <!--<p class="product-page-side-text">* Except remote areas</p>-->
+              <!--<p class="product-page-side-text">You have one month from the shipping confirmation email.</p>-->
             </div>
           </div>
           <%= link_to 'View all Post of this seller', all_user_path(@product.user_id), class: 'btn seller_post_button btn-primary' %>
