--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="box-highlight">
+          <div class="box-highlight side-small-box">
             <!--<p class="product-page-price">₹<%#= @service.price_in_rupees %></p>-->
             <p class="product-page-price time-price">
               <%if @service.per_hour_price > 0 %>
@@ -190,12 +190,23 @@
               <!--</ul>-->
             </div>
             <div class="product-page-side-section">
-              <h5 class="product-page-side-title">Shipping & Returns</h5>
-              <p class="product-page-side-text">In the store of your choice in 3-5 working days</p>
-              <p class="product-page-side-text">STANDARD 4.95 USD FREE (ORDERS OVER 50 USD) In 2-4 working days*</p>
-              <p class="product-page-side-text">EXPRESS 9.95 USD In 24-48 hours (working days)*</p>
-              <p class="product-page-side-text">* Except remote areas</p>
-              <p class="product-page-side-text">You have one month from the shipping confirmation email.</p>
+              <h5 class="product-page-side-title"><%= @service.user.name %></h5>
+              <p>
+                  <ul class="product-caption-rating">
+                    <% for i in 1..5 %>
+                        <% if i <= @service.rating %>
+                            <li class="rated"><i class="fa fa-star"></i></li>
+                        <% else %>
+                            <li class=""><i class="fa fa-star"></i></li>
+                        <% end %>
+                    <% end %>
+                  </ul>
+              </p>
+              <!--<p class="product-page-side-text">In the store of your choice in 3-5 working days</p>-->
+              <!--<p class="product-page-side-text">STANDARD 4.95 USD FREE (ORDERS OVER 50 USD) In 2-4 working days*</p>-->
+              <!--<p class="product-page-side-text">EXPRESS 9.95 USD In 24-48 hours (working days)*</p>-->
+              <!--<p class="product-page-side-text">* Except remote areas</p>-->
+              <!--<p class="product-page-side-text">You have one month from the shipping confirmation email.</p>-->
             </div>
           </div>
           <%= link_to 'View all Post of this seller', all_user_path(@service.user_id), class: 'btn seller_post_button btn-primary' %>
