--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -9,5 +9,6 @@
   <li><%= link_to 'Products', admin_products_path %></li>
   <li><%= link_to 'Services', admin_services_path %></li>
   <li><%= link_to 'Enquiries', admin_enquiries_path %></li>
+  <li><%= link_to 'Blogs', admin_blogs_path %></li>
   <!--<li><%#= link_to 'Pending Advertisements', pending_advertisements_admin_advertisements_path %></li>-->
 </ul>
