--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -21,11 +21,15 @@
       <div class="field-con">
         <%= f.input :membership_plan, label: '' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
       </div>
+    </div>
+    <div class="col-xs-12">
       <div class="field-con">
-        <%= f.input :start_at, label: 'Start at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the remaining membership will be available.'}, input_html: {class: 'select-field'} %>
+        <%= f.input :start_at, label: 'Start at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the service will be available.'}, input_html: {class: 'select-field'} %>
       </div>
+    </div>
+    <div class="col-xs-12">
       <div class="field-con">
-        <%= f.input :end_at, label: 'End at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the remaining membership will be available.'}, input_html: {class: 'select-field'} %>
+        <%= f.input :end_at, label: 'End at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the service will be available.'}, input_html: {class: 'select-field'} %>
       </div>
     </div>
     <div class="col-xs-12 commercial_space_blog">
