--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -13,6 +13,8 @@
               </li>
               <li><a href="/blog">Blog</a>
               </li>
+              <li><a href="/how_its_work">Work It's Work</a>
+              </li>
               <li><a href="/contact_us">Contact Us</a>
               </li>
             </ul>
