--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,2 +1,23 @@
-<%= @blog.heading %>
-<%= @blog.description %>
+<div class="container">
+  <header class="page-header">
+    <h1 class="page-title">Blog</h1>
+  </header>
+  <div class="row">
+    <div class="col-xs-12">
+      <article class="blog-post">
+        <h5 class="blog-post-title"><%= @blog.heading %></h5>
+        <div class="row">
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <%= image_tag 'theme_img/500x500.png', class: 'img-responsive' %>
+          </div>
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="blog-post-caption">
+              <%= @blog.description %>
+            </p>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </article>
+    </div>
+  </div>
+</div>
