--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -13,7 +13,7 @@
               </li>
               <li><a href="/blog">Blog</a>
               </li>
-              <li><a href="/how_its_work">Work It's Work</a>
+              <li><a href="/how_its_work">How It's Work</a>
               </li>
               <li><a href="/contact_us">Contact Us</a>
               </li>
