--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-xs-12">
       <div class="page-header-banner-inner">
-        <h1>Total Searches (<%= @results[:products].count + @results[:services].count %>)</h1>
+        <h1>Search Result for '<%= @search.name %>' (<%= @results[:products].count + @results[:services].count %>)</h1>
       </div>
     </div>
     <div class="col-md-3">
