--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -620,20 +620,23 @@
     display: inline-block;
     background-color: #3445d3;
   }
+  .red-color{
+    background-color: rgba(149, 55, 53, 1);
+  }
+  .skyblue-color{
+    background-color: rgba(75, 172, 198, 1);
+  }
+  .purpul-color{
+    background-color: rgba(128, 100, 162, 1);
+  }
+  .orienge-color{
+    background-color: rgba(247, 150, 70, 1);
+  }
   .green-color{
-    background-color: green;
+    background-color: rgba(155, 187, 89, 1);
   }
   .blue-color{
-    background-color: blue;
-  }
-  .black-color{
-    background-color: black;
-  }
-  .yellow-color{
-    background-color: yellow;
-  }
-  .pink-color{
-    background-color: pink;
+    background-color: rgba(79, 129, 189, 1);
   }
 }
 p.lead{
