--- a/app/views/welcome/how_it_works.html.erb
+++ b/app/views/welcome/how_it_works.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <header class="page-header">
-    <h1 class="page-title">How It's Work</h1>
+    <h1 class="page-title">How It Works</h1>
   </header>
   <div class="row">
     <div class="col-xs-12">
