--- a/app/views/customer_mailer/service_deal_confirmed.html.erb
+++ b/app/views/customer_mailer/service_deal_confirmed.html.erb
@@ -55,6 +55,10 @@
               Mobile No.: <%= @confirmed_enquiry.user.contact %>
             </p>
             <br>
+            <h3 style="text-align: center; font-size: 20px;">
+              <b>RENTAL AGREEEMENT</b>
+            </h3>
+            <br>
             <p>
               ________________________________________________________(OWNER) Full Name/Company Name, Company Number/ and/or Company Representative:
             </p>
@@ -158,7 +162,7 @@
               <b>Article 8. Maintenance, Damage and Theft</b>
             </p>
             <p>
-              <ol>
+              <ol style="font-size: 14px;">
                 <li>The Renter will use, maintain and take care of the Item in a careful and responsible manner.</li>
                 <li>The Renter will be held liable for any damages he/she causes to the rented Item. His/her liability will not exceed the potential residual value of the Item, as defined in good faith or contractually.</li>
                 <li>In the event of the Renter not returning the rented Item, he/she will be liable to pay the Owner the residual value of the Item as contractually defined in Article 2. In order to cover some of the repossession costs, an increase in the overall payment equal to 10% of the rental (excluding tax) is required, as well as late payment interest at the legal rate, taking effect 30 days after the Owner has given formal notice. In the event that the Owner defaults upon his obligations, the Renter is authorised to claim similar compensation.</li>
