chnage email to name

--- a/app/views/customer/enquiries/show.html.erb
+++ b/app/views/customer/enquiries/show.html.erb
@@ -71,7 +71,7 @@
                       <h4>Enquiry By:</h4>
                     </div>
                     <div class="col-xs-7">
-                      <p><%= @enquiry.user.email %></p>
+                      <p><%= @enquiry.user.name %></p>
                     </div>
                   </div>
                 </div>
