--- a/app/views/admin/blogs/show.html.erb
+++ b/app/views/admin/blogs/show.html.erb
@@ -7,4 +7,22 @@
       <dt>Description</dt><dd><%= @blog.description %></dd>
     </dl>
   </div>
+  <div class="col-sm-3">
+    <div class="row">
+      <% @blog.blog_images.each do |blog_image| %>
+        <div class="col-sm-12">
+          <%= image_tag blog_image.image.url(BlogImage::DEFAULT_SIZE), class: 'img-responsive' %>
+          <% if blog_image.id.present? %>
+            <%= link_to admin_blog_blog_image_path(@blog, blog_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                  <i class="fa fa-trash fa-3"></i>
+            <% end %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+    <fieldset>
+      <legend><small>Add new images</small></legend>
+      <%= render partial: 'admin/blog_images/form', locals: { blog: @blog, blog_image: @blog.blog_images.new } %>
+    </fieldset>
+  </div>
 </div>
