--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -15,7 +15,11 @@
                 <div class="white-bg">
                   <div class="col-md-2 col-sm-3 col-xs-12 text-center">
                     <div class="add-image-con">
-                      <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                      <% if blog.blog_images.any? %>
+                          <%= image_tag blog.blog_images.first.image(:size_500x500), class: 'img-responsive' %>
+                      <% else %>
+                          <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                      <% end %>
                     </div>
                   </div>
                   <div class="col-md-10 col-sm-9 col-xs-12">
