--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -11,7 +11,7 @@
               </li>
               <li><a href="/faq">FAQ</a>
               </li>
-              <li><a href="/blog">Blog</a>
+              <li><a href="/blogs">Blog</a>
               </li>
               <li><a href="/how_it_works">How It Works</a>
               </li>
